--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 2018 Robot Project/.vs/
 2018 Robot Project/build/tmp/
 2018 Robot Project/build/objs/
+2018 Robot Project/.gradle/
+2018 Robot Project/build/
