--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 2018 Robot Project/build/objs/
 2018 Robot Project/.gradle/
 2018 Robot Project/build/
+2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/bin/
+2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/obj/
