--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 2018 Robot Project/build/
 2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/bin/
 2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/obj/
+2018 Robot Project/Dashboard/2018 Main Dashboard/.vs
