--- a/2018 Robot Project/frcUserProgramExe.vcxproj
+++ b/2018 Robot Project/frcUserProgramExe.vcxproj
@@ -33,6 +33,7 @@
   <ItemGroup Label="Sources">
     <ClCompile Include="build.gradle" />
     <ClCompile Include="src\cpp\ControlTask.cpp" />
+    <ClCompile Include="src\cpp\DashboardTask.cpp" />
     <ClCompile Include="src\cpp\ip\IpEndpointName.cpp" />
     <ClCompile Include="src\cpp\ip\NetworkingUtils.cpp" />
     <ClCompile Include="src\cpp\ip\UdpSocket.cpp" />
@@ -48,6 +49,7 @@
   <ItemGroup>
     <ClInclude Include="src\include\Controls.h" />
     <ClInclude Include="src\include\ControlTask.h" />
+    <ClInclude Include="src\include\DashboardTask.h" />
     <ClInclude Include="src\include\ip\IpEndpointName.h" />
     <ClInclude Include="src\include\ip\NetworkingUtils.h" />
     <ClInclude Include="src\include\ip\PacketListener.h" />
