--- a/2018 Robot Project/frcUserProgramExe.vcxproj.filters
+++ b/2018 Robot Project/frcUserProgramExe.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\cpp\DashboardTask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\cpp\DrivingTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\Robot.h">
@@ -138,6 +141,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\include\DashboardTask.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\DrivingTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
