--- a/2018 Robot Project/frcUserProgramExe.vcxproj.filters
+++ b/2018 Robot Project/frcUserProgramExe.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="src\cpp\DrivingTask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DrivingTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\Robot.h">
@@ -122,9 +125,6 @@
     <ClInclude Include="src\include\SampleTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\include\Controls.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\include\maxutils\MaxDataStream.h">
       <Filter>Header Files\maxutils</Filter>
     </ClInclude>
@@ -144,6 +144,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\include\DrivingTask.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DrivingTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
