Add framework to support autonomous programs

--- a/2018 Robot Project/frcUserProgramExe.vcxproj.filters
+++ b/2018 Robot Project/frcUserProgramExe.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClCompile Include="src\cpp\DrivingTask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\cpp\maxutils\MaxAutonomous.cpp">
+      <Filter>Source Files\maxutils</Filter>
+    </ClCompile>
+    <ClCompile Include="src\cpp\SampleAutonomous.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\Robot.h">
@@ -141,6 +147,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\include\DrivingTask.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\maxutils\MaxAutonomous.h">
+      <Filter>Header Files\maxutils</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\SampleAutonomous.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
