--- a/2018 Robot Project/frcUserProgramExe.vcxproj.filters
+++ b/2018 Robot Project/frcUserProgramExe.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="src\cpp\SampleAutonomous.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\cpp\LiftingTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\Robot.h">
@@ -153,6 +156,9 @@
       <Filter>Header Files\maxutils</Filter>
     </ClInclude>
     <ClInclude Include="src\include\SampleAutonomous.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\LiftingTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
