--- a/2018 Robot Project/frcUserProgramExe.vcxproj.filters
+++ b/2018 Robot Project/frcUserProgramExe.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="src\cpp\LiftingTask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\cpp\PowerReportingTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\include\Robot.h">
@@ -159,6 +162,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\include\LiftingTask.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\include\PowerReportingTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
