Added borders, updated text for switches control, added background, made it look better in general.

--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/2018 Main Dashboard.csproj
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/2018 Main Dashboard.csproj
@@ -170,5 +170,8 @@
     <Resource Include="Joystick.jpg" />
     <Resource Include="Xbox Controller.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="GreenHill.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
