Update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 2018 Robot Project/.vs/
-2018 Robot Project/build/tmp/
-2018 Robot Project/build/objs/
+2018 Robot Project/build/
 2018 Robot Project/.gradle/
 2018 Robot Project/build/
 2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/bin/
