Initial data monitor commit

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/bin/
 2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/obj/
 2018 Robot Project/Dashboard/2018 Main Dashboard/.vs
+DataMonitor/.vs/DataMonitor/v15/Server/sqlite3/db.lock
+DataMonitor/DataMonitor/bin/
+DataMonitor/DataMonitor/obj/
+DataMonitor/.vs/DataMonitor/v15/Server/sqlite3/
